bad/return_int_in_func_returning_string.example_compiler_output
ERROR
[1mbad/return_int_in_func_returning_string.lat:2:24: [1;31merror: [0;1mreturned value of type `int` is not convertible to return type `string`[m
string test() { return 42; }
                       [1;32m^[m
